alb-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alb-ingress-controller
  name: alb-ingress-controller
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alb-ingress-controller
  template:
    metadata:
      labels:
        app: alb-ingress-controller
    spec:
      containers:
        - name: alb-ingress-controller
          args:
            - --ingress-class=alb
            - --cluster-name=$(CLUSTER_NAME)
            - --aws-vpc-id=$(VPC_ID)
            - --aws-region=$(AWS_REGION)
          image: amazon/aws-alb-ingress-controller:v2.2.0
      serviceAccountName: alb-ingress-controller
